--- a/slnAllShow/prjAllShow.Backend/Areas/Admin/Views/_ViewImports.cshtml
+++ b/slnAllShow/prjAllShow.Backend/Areas/Admin/Views/_ViewImports.cshtml
@@ -5,5 +5,8 @@
 
 @using AllShowDTO
 
+@using Microsoft.AspNetCore.Mvc.Localization
+@using prjAllShow.Backend.Resources
+
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
