測試Modal彈出視窗，商店類別新增修改用Modal+Iframe彈出視窗，CRUD用axios呼叫API做存取，Layout對baseInstance加上RequestVerificationToken使功能正常運行

--- a/slnAllShow/prjAllShow.Backend/Areas/Admin/Views/Shop/Index.cshtml
+++ b/slnAllShow/prjAllShow.Backend/Areas/Admin/Views/Shop/Index.cshtml
@@ -54,7 +54,7 @@
                 @{
                     string imgUrl = Url.Action("ShowImages", "FilesUpload", new { Area = "", id = item.ShLogoPic });
                 }
-                <img width="100" height="100" src="@imgUrl">
+                <img width="100" height="100" src="@imgUrl" asp-append-version="true">
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ShName)
