--- a/slnAllShow/prjAllShow.Backend/Areas/Admin/Views/Member/Index.cshtml
+++ b/slnAllShow/prjAllShow.Backend/Areas/Admin/Views/Member/Index.cshtml
@@ -51,7 +51,7 @@
                @{
                     string imgUrl = Url.Action("ShowImages", "FilesUpload", new { Area = "", id = item.MemPic });
                 }
-                <img width="100" height="100" src="@imgUrl">
+                <img width="100" height="100" src="@imgUrl" asp-append-version="true">
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.MemEmail)
