調整Layout的Script位置，頁面引用section Scripts

--- a/slnAllShow/prjAllShow.Backend/Areas/Admin/Views/Employee/Index.cshtml
+++ b/slnAllShow/prjAllShow.Backend/Areas/Admin/Views/Employee/Index.cshtml
@@ -83,4 +83,6 @@
                                     { "PageIndex", Model.PageIndex },
                                     { "TotalPages", Model.TotalPages },
                                 })
-<script src="~/scripts/Admin/Employee/Index.js"></script>
+@section Scripts{
+    <script src="~/scripts/Admin/Employee/Index.js"></script>
+}
