--- a/slnAllShow/prjAllShow.Backend/Areas/Admin/Views/Shop/Index.cshtml
+++ b/slnAllShow/prjAllShow.Backend/Areas/Admin/Views/Shop/Index.cshtml
@@ -98,4 +98,6 @@
                                     { "PageIndex", Model.PageIndex },
                                     { "TotalPages", Model.TotalPages },
                                 })
-<script src="~/scripts/Admin/Shop/Index.js"></script>
+@section Scripts{
+    <script src="~/scripts/Admin/Shop/Index.js"></script>
+}
