--- a/slnAllShow/prjAllShow.Backend/Views/Home/Index.cshtml
+++ b/slnAllShow/prjAllShow.Backend/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 
 <div class="col-12 col-md-8 mb-2">
     <div class="card" style="width:100%;">
-        <img class="card-img-top" src="~/Images/fPage.png" style="height:600px" />
+        <img class="card-img-top" src="~/Images/fPage.png" style="height:600px" asp-append-version="true"/>
         <div class="card-body">
             <h5 class="card-title">這是首頁</h5>
             <p class="card-text text-secondary">系統管理者：我</p>
