--- a/slnAllShow/prjAllShow.Backend/Views/Test/Index.cshtml
+++ b/slnAllShow/prjAllShow.Backend/Views/Test/Index.cshtml
@@ -52,4 +52,6 @@
     <modal_popup ref="serviceModal" v-on:emit-hide="hidePopupModal"/>
 </div>
 
-<script src="~/scripts/Test/Index.js"></script>
+@section Scripts{
+    <script src="~/scripts/Test/Index.js"></script>
+}
