--- a/slnAllShow/prjAllShow.Backend/Areas/Admin/Views/Member/Index.cshtml
+++ b/slnAllShow/prjAllShow.Backend/Areas/Admin/Views/Member/Index.cshtml
@@ -92,4 +92,6 @@
                                     { "PageIndex", Model.PageIndex },
                                     { "TotalPages", Model.TotalPages },
                                 })
-<script src="~/scripts/Admin/Member/Index.js"></script>
+@section Scripts{
+    <script src="~/scripts/Admin/Member/Index.js"></script>
+}
