--- a/slnAllShow/prjAllShow.Backend/Views/Shared/_LayoutAdmin.cshtml
+++ b/slnAllShow/prjAllShow.Backend/Views/Shared/_LayoutAdmin.cshtml
@@ -10,7 +10,8 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewData["Title"] - AllShow</title>
     <link rel="stylesheet" href="~/vendor/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="~/vendor/bootstrap-vue/dist/bootstrap-vue.min.css" /> 
+    <link rel="stylesheet" href="~/vendor/bootstrap-vue/dist/bootstrap-vue.min.css" />
+    <link rel="stylesheet" href="~/vendor/slim-select/dist/slimselect.min.css" /> 
     <style>
         .numberCircle {
           display: inline-block;
@@ -96,7 +97,8 @@
     @*<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>*@
     @*<script src="https://unpkg.com/vue@next"></script>*@
     <script src="~/vendor/vue/dist/vue.global.prod.js"></script> 
-    <script src="~/vendor/axios/dist/axios.js"></script>  
+    <script src="~/vendor/axios/dist/axios.js"></script> 
+    <script src="~/vendor/slim-select/dist/slimselect.min.js"></script>  
     <script src="~/scripts/Shared.js"></Script>
     <script>
         const defaultOptions = {
