--- a/slnAllShow/prjAllShow.Backend/Areas/Admin/Views/ShClass/Index.cshtml
+++ b/slnAllShow/prjAllShow.Backend/Areas/Admin/Views/ShClass/Index.cshtml
@@ -74,7 +74,7 @@
         <div class="row">
             <div class="col-xs-4 col-sm-6">
                                    
-                    <table class="table table-dark table-hover">
+                    <table class="table table-hover">
                         <thead>
                             <tr>
                                 <th style="width:40%">@_localizer["ShClass.ShClassName"]</th>
@@ -103,7 +103,7 @@
                 </div>
                 <div class="col-xs-8 col-sm-6">
                 
-                    <table class="table table-dark table-striped">
+                    <table class="table table-striped">
                         <thead>
                             <tr>
                                 <th style="width:40%">@_localizer["Shop.ShName"]</th>
